--- a/CCT_NEWS_CA2/src/app/home/home.page.html
+++ b/CCT_NEWS_CA2/src/app/home/home.page.html
@@ -13,5 +13,24 @@
     </ion-toolbar>
   </ion-header>
 
-  
+  <ng-container *ngFor="let article of topHeadlines">
+    <ng-template [ngTemplateOutlet]="articleTemplate" [ngTemplateOutletContext]="{ $implicit: article }"></ng-template>
+  </ng-container>
+
+  <ng-template #articleTemplate let-article>
+    <ion-list>
+      <ion-row style="background-color: rgba(128, 128, 128, 0.482) ; border-radius: 16px;" class="ion-margin">
+        <ion-col size="4">
+          <img style="width:300px; height: 100px; object-fit: cover; border-radius: 5px;" src="{{article.urlToImage}}" />
+        </ion-col>
+        <ion-col size="8">
+          <ion-label>
+            {{ article.author }}
+            <p>{{article.publishedAt | date}}</p>
+            <p style="font-weight: 200;">{{article.title}}</p>
+          </ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-list>
+  </ng-template>
 </ion-content>
