--- a/CCT_NEWS_CA2/src/app/home/home.page.scss
+++ b/CCT_NEWS_CA2/src/app/home/home.page.scss
@@ -1,27 +1,78 @@
-#container {
-  text-align: center;
+ion-header {
+  background-color: #807b7b;
+  color: white;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  ion-toolbar {
+    --ion-toolbar-background: transparent;
+    --ion-toolbar-text-color: white;
+  }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
+ion-tab-button {
+  background-color: #f0f0f0;
+  color: #000;
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  padding: 10px;
+  border: 1px solid #ccc;
 }
 
-#container a {
-  text-decoration: none;
+ion-tab-button[aria-selected="true"] {
+  background-color: #333;
+  color: #fff;
+}
+
+
+  ion-title {
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
+
+ion-content {
+  background-color: #f5f5f5;
+
+  .article-card {
+    margin: 10px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .article-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  .article-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+
+  .article-details {
+    color: #f3eded;
+    margin-top: 5px;
+  }
+
+  .article-description {
+    margin-top: 10px;
+    line-height: 1.5;
+  }
+
+  .action-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+
+    ion-button {
+      margin-left: 10px;
+    }
+  }
+
+  ion-button.read-more-button {
+    --ion-color-primary: #333;
+    --ion-color-primary-contrast: white;
+  }
 }
